--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,22 +1,22 @@
 {
   "current": {
-    "color_text": "#000000",
-    "color_body_text": "#000000",
-    "color_sale_text": "#eb1c7d",
-    "color_button": "#000000",
+    "color_text": "#3a3a3a",
+    "color_body_text": "#0a0a0a",
+    "color_sale_text": "#ea0606",
+    "color_button": "#3a3a3a",
     "color_button_text": "#ffffff",
-    "color_small_button_text_border": "#000000",
+    "color_small_button_text_border": "#3a3a3a",
     "color_text_field_text": "#000000",
     "color_text_field_border": "#ffffff",
     "color_text_field": "#ffffff",
-    "color_image_overlay_text": "#ffffff",
-    "color_image_overlay": "#3c4789",
-    "image_overlay_opacity": 50,
+    "color_image_overlay_text": "#000000",
+    "color_image_overlay": "#ffffff",
+    "image_overlay_opacity": 0,
     "color_borders": "#ebebeb",
-    "color_body_bg": "#ffffff",
-    "type_header_font": "nunito_sans_n4",
-    "type_header_base_size": 24,
-    "type_base_font": "nunito_sans_n4",
+    "color_body_bg": "#cacaca",
+    "type_header_font": "roboto_n4",
+    "type_header_base_size": 28,
+    "type_base_font": "helvetica_n4",
     "type_base_size": 16,
     "predictive_search_enabled": true,
     "predictive_search_show_vendor": false,
@@ -27,7 +27,7 @@
     "social_twitter_link": "#",
     "social_facebook_link": "#",
     "social_pinterest_link": "",
-    "social_instagram_link": "#",
+    "social_instagram_link": "",
     "social_tumblr_link": "",
     "social_snapchat_link": "",
     "social_youtube_link": "#",
@@ -35,32 +35,32 @@
     "favicon": "",
     "enable_ajax": true,
     "checkout_header_image": "",
-    "checkout_logo_image": "shopify:\/\/shop_images\/Logo_48px_-_Black_1.png",
+    "checkout_logo_image": "shopify:\/\/shop_images\/Logo_48px_-_Black_1_9e6f6c33-368a-4168-a6df-82490e355d7d.png",
     "checkout_logo_position": "left",
     "checkout_logo_size": "medium",
     "checkout_body_background_image": "",
-    "checkout_body_background_color": "#cc1d91",
+    "checkout_body_background_color": "#fff",
     "checkout_input_background_color_mode": "white",
     "checkout_sidebar_background_image": "",
-    "checkout_sidebar_background_color": "#000000",
-    "checkout_heading_font": "Roboto",
-    "checkout_body_font": "Roboto",
-    "checkout_accent_color": "#000000",
-    "checkout_button_color": "#000000",
+    "checkout_sidebar_background_color": "#fafafa",
+    "checkout_heading_font": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
+    "checkout_body_font": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
+    "checkout_accent_color": "#ffffff",
+    "checkout_button_color": "#197bbd",
     "checkout_error_color": "#e32c2b",
     "sections": {
       "header": {
         "type": "header",
         "settings": {
           "align_logo": "left",
-          "logo": "shopify:\/\/shop_images\/Logo_48px_-_Black_1.png",
-          "logo_max_width": 200,
+          "logo": "shopify:\/\/shop_images\/Logo_48px_-_Black_1_9e6f6c33-368a-4168-a6df-82490e355d7d.png",
+          "logo_max_width": 215,
           "main_linklist": "main-menu",
           "message": false,
           "home_page_only": true,
           "message_text": "Announce something here",
           "message_link": "",
-          "color_bg": "#3a3a3a",
+          "color_bg": "#1f0606",
           "color_text": "#ffffff"
         }
       },
@@ -269,59 +269,6 @@
         "settings": {
           "cart_ajax_enable": true,
           "cart_notes_enable": false
-        }
-      },
-      "collection-template": {
-        "type": "collection-template",
-        "settings": {
-          "layout": "grid",
-          "grid": 4,
-          "rows": 2,
-          "show_collection_image": true,
-          "show_vendor": false,
-          "sort_enable": true,
-          "tags_enable": true
-        }
-      },
-      "blog-template": {
-        "type": "blog-template",
-        "settings": {
-          "layout": "list",
-          "blog_show_author": true,
-          "blog_show_date": true
-        }
-      },
-      "list-collections-template": {
-        "type": "list-collections-template",
-        "settings": {
-          "display_type": "all",
-          "sort": "alphabetical",
-          "grid": 3
-        }
-      },
-      "password-header": {
-        "type": "password-header",
-        "settings": {
-          "logo": "",
-          "logo_max_width": 100,
-          "header": "Coming Soon"
-        }
-      },
-      "password-content": {
-        "type": "password-content",
-        "settings": {
-          "newsletter_enable": true,
-          "newsletter_form_heading": "Be the first to know when we launch.",
-          "newsletter_form_subheading": "<p>Promotions, new products and sales. Directly to your inbox.<\/p>",
-          "newsletter_placeholder": "Email address",
-          "newsletter_button_text": "Notify me"
-        }
-      },
-      "password-footer": {
-        "type": "password-footer",
-        "settings": {
-          "show_share_buttons": true,
-          "social_message": "Spread the word"
         }
       }
     },
