--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,129 +1,35 @@
 {
   "current": {
-    "color_text": "#3a3a3a",
-    "color_body_text": "#0a0a0a",
-    "color_sale_text": "#ea0606",
-    "color_button": "#3a3a3a",
-    "color_button_text": "#ffffff",
-    "color_small_button_text_border": "#3a3a3a",
-    "color_text_field_text": "#000000",
-    "color_text_field_border": "#ffffff",
-    "color_text_field": "#ffffff",
-    "color_image_overlay_text": "#000000",
-    "color_image_overlay": "#ffffff",
-    "image_overlay_opacity": 0,
-    "color_borders": "#ebebeb",
-    "color_body_bg": "#cacaca",
-    "type_header_font": "roboto_n4",
-    "type_header_base_size": 28,
-    "type_base_font": "helvetica_n4",
-    "type_base_size": 16,
-    "predictive_search_enabled": true,
-    "predictive_search_show_vendor": false,
-    "predictive_search_show_price": false,
-    "share_facebook": true,
-    "share_twitter": true,
-    "share_pinterest": true,
-    "social_twitter_link": "#",
-    "social_facebook_link": "#",
-    "social_pinterest_link": "",
-    "social_instagram_link": "",
-    "social_tumblr_link": "",
-    "social_snapchat_link": "",
-    "social_youtube_link": "#",
-    "social_vimeo_link": "",
-    "favicon": "",
-    "enable_ajax": true,
-    "checkout_header_image": "",
-    "checkout_logo_image": "shopify:\/\/shop_images\/Logo_48px_-_Black_1_9e6f6c33-368a-4168-a6df-82490e355d7d.png",
-    "checkout_logo_position": "left",
-    "checkout_logo_size": "medium",
-    "checkout_body_background_image": "",
-    "checkout_body_background_color": "#fff",
-    "checkout_input_background_color_mode": "white",
-    "checkout_sidebar_background_image": "",
-    "checkout_sidebar_background_color": "#fafafa",
-    "checkout_heading_font": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
-    "checkout_body_font": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
-    "checkout_accent_color": "#ffffff",
-    "checkout_button_color": "#197bbd",
-    "checkout_error_color": "#e32c2b",
     "sections": {
       "header": {
         "type": "header",
-        "settings": {
-          "align_logo": "left",
-          "logo": "shopify:\/\/shop_images\/Logo_48px_-_Black_1_9e6f6c33-368a-4168-a6df-82490e355d7d.png",
-          "logo_max_width": 215,
-          "main_linklist": "main-menu",
-          "message": false,
-          "home_page_only": true,
-          "message_text": "Announce something here",
-          "message_link": "",
-          "color_bg": "#1f0606",
-          "color_text": "#ffffff"
-        }
+        "settings": {}
       },
       "hero-1": {
         "type": "hero",
         "settings": {
-          "image": "",
-          "alignment": "center",
-          "hero_layout": "full_width",
           "hero_size": "large",
-          "text_size": "large",
-          "title": "Image with text overlay",
-          "text": "<p>Use overlay text to give your customers insight into your brand. Select imagery and text that relates to your style and story.<\/p>",
-          "button_label": "",
-          "button_link": ""
+          "text_size": "large"
         }
       },
       "feature-row": {
         "type": "feature-row",
-        "settings": {
-          "image": "",
-          "layout": "left",
-          "title": "Image with text",
-          "text": "<p>Pair large text with an image to give focus to your chosen product, collection, or blog post. Add details on availability, style, or even provide a review.<\/p>",
-          "button_label": "",
-          "button_link": ""
-        }
+        "settings": {}
       },
       "feature-columns": {
         "type": "feature-columns",
         "blocks": {
           "feature-columns-0": {
             "type": "text_block",
-            "settings": {
-              "enable_image": true,
-              "image": "",
-              "title": "Add a title or tagline",
-              "text": "<p>Share blog posts, products, or promotions with your customers. Use this text to describe products, share details on availability and style, or as a space to display recent reviews or FAQs.<\/p>",
-              "button_label": "",
-              "button_link": ""
-            }
+            "settings": {}
           },
           "feature-columns-1": {
             "type": "text_block",
-            "settings": {
-              "enable_image": true,
-              "image": "",
-              "title": "Add a title or tagline",
-              "text": "<p>Share blog posts, products, or promotions with your customers. Use this text to describe products, share details on availability and style, or as a space to display recent reviews or FAQs.<\/p>",
-              "button_label": "",
-              "button_link": ""
-            }
+            "settings": {}
           },
           "feature-columns-2": {
             "type": "text_block",
-            "settings": {
-              "enable_image": true,
-              "image": "",
-              "title": "Add a title or tagline",
-              "text": "<p>Share blog posts, products, or promotions with your customers. Use this text to describe products, share details on availability and style, or as a space to display recent reviews or FAQs.<\/p>",
-              "button_label": "",
-              "button_link": ""
-            }
+            "settings": {}
           }
         },
         "block_order": [
@@ -132,33 +38,19 @@
           "feature-columns-2"
         ],
         "settings": {
-          "title": "",
-          "align_text": "left"
+          "title": ""
         }
       },
       "collection": {
         "type": "collection",
         "settings": {
-          "title": "Featured collection",
-          "collection": "",
-          "grid": 4,
-          "rows": 2,
-          "show_vendor": false,
-          "show_view_all": false
+          "grid": 4
         }
       },
       "hero-2": {
         "type": "hero",
         "settings": {
-          "image": "",
-          "alignment": "center",
-          "hero_layout": "full_width",
-          "hero_size": "medium",
-          "text_size": "large",
-          "title": "Image with text overlay",
-          "text": "<p>Use overlay text to give your customers insight into your brand. Select imagery and text that relates to your style and story.<\/p>",
-          "button_label": "",
-          "button_link": ""
+          "text_size": "large"
         }
       },
       "quotes": {
@@ -166,24 +58,15 @@
         "blocks": {
           "quotes-0": {
             "type": "quote",
-            "settings": {
-              "quote": "<p>Add customer reviews and testimonials to showcase your store’s happy customers.<\/p>",
-              "author": "Author's name"
-            }
+            "settings": {}
           },
           "quotes-1": {
             "type": "quote",
-            "settings": {
-              "quote": "<p>Add customer reviews and testimonials to showcase your store’s happy customers.<\/p>",
-              "author": "Author's name"
-            }
+            "settings": {}
           },
           "quotes-2": {
             "type": "quote",
-            "settings": {
-              "quote": "<p>Add customer reviews and testimonials to showcase your store’s happy customers.<\/p>",
-              "author": "Author's name"
-            }
+            "settings": {}
           }
         },
         "block_order": [
@@ -200,30 +83,15 @@
         "blocks": {
           "image-bar-0": {
             "type": "image",
-            "settings": {
-              "image": "",
-              "alignment": "center",
-              "link": "",
-              "cta_label": ""
-            }
+            "settings": {}
           },
           "image-bar-1": {
             "type": "image",
-            "settings": {
-              "image": "",
-              "alignment": "center",
-              "link": "",
-              "cta_label": ""
-            }
+            "settings": {}
           },
           "image-bar-2": {
             "type": "image",
-            "settings": {
-              "image": "",
-              "alignment": "center",
-              "link": "",
-              "cta_label": ""
-            }
+            "settings": {}
           }
         },
         "block_order": [
@@ -231,25 +99,18 @@
           "image-bar-1",
           "image-bar-2"
         ],
-        "settings": {
-          "section_height": "medium"
-        }
+        "settings": {}
       },
       "footer": {
         "type": "footer",
         "blocks": {
           "footer-0": {
             "type": "link_list",
-            "settings": {
-              "title": "Quick links",
-              "menu": "footer"
-            }
+            "settings": {}
           },
           "footer-1": {
             "type": "newsletter",
-            "settings": {
-              "title": "Newsletter"
-            }
+            "settings": {}
           }
         },
         "block_order": [
@@ -257,18 +118,7 @@
           "footer-1"
         ],
         "settings": {
-          "show_payment_icons": true,
-          "color_footer_bg": "#000000",
-          "color_footer_text": "#ffffff",
-          "show_locale_selector": true,
-          "show_currency_selector": true
-        }
-      },
-      "cart-template": {
-        "type": "cart-template",
-        "settings": {
-          "cart_ajax_enable": true,
-          "cart_notes_enable": false
+          "show_payment_icons": true
         }
       }
     },
